# blackboard-agent

./: AGENTS.md  CLAUDE.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  privileged.yml
.github/scripts/: check_sdk_methods.py  run_langgraph_cli_test.py
.github/workflows/: _integration_test.yml  _lint.yml  _test.yml  _test_langgraph.yml  _test_release.yml  baseline.yml  bench.yml  ci.yml  deploy-redirects.yml  pr_lint.yml  release.yml  (+1 more)
docs/: generate_redirects.py  llms.txt  redirects.json
examples/: README.md  react-agent-from-scratch.ipynb  react-agent-structured-output.ipynb  run-id-langsmith.ipynb  subgraph.ipynb  tool-calling.ipynb
libs/kernel_system/: .gitignore  FIX_INFINITE_LOOP.md  FIX_REPORT.md  GENERALIZATION_REPORT.md  PATCH_FIX_DESIGN.md  README.md  STATE_PERSISTENCE.md  SYSTEM_SUMMARY.md  example.py  example_dynamic.py  example_llm.py  example_simple.py  interactive_demo.py  pyproject.toml  test_api.py  test_generalization.py  test_interactive.py  test_optimized.py  test_raw_api.py  test_simple_cases.py  test_structured.py  test_writing_task.py
libs/kernel_system/langgraph_kernel/: __init__.py  graph.py  llm_wrapper.py  types.py
libs/kernel_system/langgraph_kernel/architect/: agent.py  orchestrator.py
libs/kernel_system/langgraph_kernel/kernel/: node.py  node_old.py  patch_fixer.py  router.py  validator.py
libs/kernel_system/langgraph_kernel/worker/: base.py  registry.py
libs/kernel_system/tests/: test_graph.py  test_router.py  test_validator.py
(+384 files in other folders)
